forth/test/fail/test_value_name_non_ident.af
\ Must fail to compile.
123 let: BAD-VALUE
